fixed up the overflow on the dropdown

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -58,5 +58,7 @@ form:invalid button[type="submit"] {
 }
 
 .XL {
-  width: 90vw;
+  width: 95vw;
+  max-height: 80vh;
+  overflow: auto;
 }
